# clawpack_v2

./: .coveragerc  .env  .env.example  .gitignore  .gitleaks.toml  .gitmodules  .pre-commit-config.yaml  CHRONICLE_ATTRIBUTION.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLETE_AGENT_DOCUMENTATION.md  CONTENT_INDEX.md  CONTRIBUTING.md  DATASET_OVERVIEW.md  IMPLEMENTATION_SUMMARY.md  LICENSE-DATA  LIU_ATTRIBUTION.md  README-DATA.md  README.md  README_es.txt  SECURITY.md  THIS_IS_WTF_IS_GOING_ON_IN_CLAWPACK_V2.md  __init__.py  a2a_server.py  audit_jurisdictions.py  audit_jurisdictions_report.json  claw.py  clawpack.py  clawpack_backup.py  clawpack_config.json  cloud_model_config.json  confidence_scores.json  county_court.md  debug_llmclaw.py  decisions.md  district_court.md  docker-compose.yml  family_court.md  fix_gb2.py  fix_proof.py  (+15 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
agents/crustyclaw/: Cargo.toml  README.md  agent_handler.py  chronicle_bridge.py  crustyclaw.py  data_io.py  schema.py
agents/crustyclaw/cli/: __init__.py
agents/crustyclaw/commands/: __init__.py  cargo.py  explain.py  rust.py  system.py
agents/crustyclaw/config/: __init__.py
agents/crustyclaw/core/: __init__.py  data.py  engine.py
agents/crustyclaw/data/: shared_memory.json
agents/crustyclaw/integrations/: chronicle_bridge.rs
agents/crustyclaw/providers/: __init__.py
agents/crustyclaw/src/: a2a.rs  chronicle_commands.rs  lib.rs  main.rs  memory.rs  security.rs
agents/txclaw/contracts/my_auction_contract/: Cargo.toml
agents/txclaw/contracts/my_auction_contract/src/: contract.rs
core/: agent_loader.py  command_router.py  llm_cache.json  llm_manager.py  llm_router.py  math_engine.py  permissions.py  query_loop.py  state.py  tool.py
data/: MASTER_ATTRIBUTION_INDEX.md  data_api.py  (+4 more)
(+33771 files in other folders)
