[package]
name = "crustyclaw"
version = "2.0.0"
edition = "2021"
authors = ["Greg <greg@clawpack.io>"]
description = "Fast, memory-safe Rust AI assistant for Clawpack v2"
license = "MIT"

[lib]
name = "crustyclaw"
path = "src/lib.rs"

[[bin]]
name = "crustyclaw"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# HTTP & Networking
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# A2A Protocol
# Local communication with Clawpack agents

# AI/LLM
ollama-rs = { version = "0.1", optional = true }

# Code analysis
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"

# CLI & Config
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Memory & Storage
sled = "0.34"
serde_yaml = "0.9"

[features]
default = ["ollama"]
ollama = ["ollama-rs"]
a2a = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
lazy_static = "1.4"
