[package]
name = "my_auction_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.5.0"
cosmwasm-storage = "1.5.0"
cw-storage-plus = "1.2.0"
schemars = "0.8.12"
serde = { version = "1.0.193", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-schema = "1.5.0"
